--- a/compose_app/build.gradle
+++ b/compose_app/build.gradle
@@ -4,8 +4,14 @@ buildscript {
         compose_version = '1.0.1'
     }
     repositories {
-        google()
+
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/central/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
+        mavenLocal()
         mavenCentral()
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
