--- a/compose_app/app/build.gradle
+++ b/compose_app/app/build.gradle
@@ -57,9 +57,31 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+
+    //刷新头
+    api "com.google.accompanist:accompanist-swiperefresh:$accompanist_pager"
+    //UI ProvideWindowInsets正确获取状态栏高度
+    api "com.google.accompanist:accompanist-insets-ui:$accompanist_pager"
+    //控制UI栏
+    api "com.google.accompanist:accompanist-systemuicontroller:$accompanist_pager"
+    //提供了分页布局支持,类似viewPager
+    api "com.google.accompanist:accompanist-pager:$accompanist_pager"
+
+    /**
+     * compose提供有viewModel等其他方便的函数
+     * 以下为Compose扩展库
+     */
+    api "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_compose_version"
+    //提供observeAsState等方法
+    api "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    //Coil 核心库
+    api "com.google.accompanist:accompanist-coil:$coil_version"
 }
